# tox

./: .appveyor.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  COPYING.iOS  Cargo.toml  Dockerfile  LICENSE-GPL  LICENSE-MIT  README.md  RUNNERS.md  bootstrap-osx.sh  rustfmt.toml
.github/workflows/: commit-msg.yml  rust.yml
dpkg/: config.yml  tox-node.service
dpkg/info/: postinst
examples/: Cargo.toml  dht_node.rs  dht_node_new.rs  dht_server.rs  echo.rs  onion_client.rs  tcp_client.rs  tcp_connection.rs  tcp_connections.rs  tcp_server.rs
examples/common/: mod.rs
scripts/: bootstrap-osx.sh  bootstrap-ubuntu-14-04.sh  coverage.sh  deploy-gh-pages.sh  verify-commit-messages.sh
src/: cli_config.rs  lib.rs  main.rs  motd.rs  node_config.rs
src/toxcore/: binary_io.rs  binary_io_new.rs  crypto_core.rs  dht.rs  dht_node.rs  error.rs  io_tokio.rs  ip_port.rs  network.rs  packed_node.rs  packet_kind.rs  stats.rs  time.rs  timeout.rs  toxid.rs  utils.rs
src/toxcore/dht/: client.rs  codec.rs  daemon_state.rs  dht_friend.rs  dht_node.rs  errors.rs  kbucket.rs  ktree.rs  lan_discovery.rs  mod.rs  nodes_queue.rs  packed_node.rs  packet.rs  precomputed_cache.rs  request_queue.rs  server.rs  server_ext.rs
src/toxcore/dht/packet/: bootstrap_info.rs  cookie.rs  cookie_request.rs  cookie_response.rs  crypto_data.rs  crypto_handshake.rs  dht_request.rs  errors.rs  lan_discovery.rs  macros.rs  mod.rs  nodes_request.rs  nodes_response.rs  ping_request.rs  ping_response.rs
src/toxcore/dht/server/: client.rs  errors.rs  hole_punching.rs  mod.rs  ping.rs  ping_sender.rs
src/toxcore/dht_new/: binary_io.rs  bucket.rs  client.rs  codec.rs  dht_impl.rs  dht_node.rs  kbucket.rs  mod.rs  packed_node.rs  packet.rs  packet_kind.rs  server.rs
src/toxcore/dht_old/: binary_io_tests.rs  dht_node.rs  dht_tests.rs  example_dht_node.rs  hole_punching.rs  lib_rs_doc.txt  network_tests.rs  packet_kind_tests.rs  timeout.rs
src/toxcore/friend_connection/: errors.rs  mod.rs
src/toxcore/messenger/: mod.rs
src/toxcore/net_crypto/: crypto_connection.rs  errors.rs  mod.rs  packets_array.rs
src/toxcore/onion/: mod.rs  nodes_pool.rs  onion_announce.rs  onion_client.rs  packet.rs  paths_pool.rs  request_queue.rs
src/toxcore/state_format/: mod.rs  old.rs  old_state_format.rs
src/toxcore/tcp/: binary_io.rs  codec.rs  connection_id.rs  connections.rs  handshake.rs  links.rs  mod.rs  packet.rs  secure.rs
src/toxcore_tests/: binary_io_tests.rs  crypto_core_tests.rs  dht_tests.rs  network_tests.rs  packet_kind_tests.rs  state_format_old_tests.rs  test.rs  test_macros.rs  toxid_tests.rs
src/toxencryptsave/: encryptsave.rs  mod.rs
src/toxencryptsave_tests/: ciphertext  encryptsave_tests.rs
tests/: load-state-format-old.rs  serialize-deserialize-state-format-old.rs  state-format-old.rs
tests/data/: old-profile-no-friends.tox
tox/: Cargo.toml
tox/src/: lib.rs
tox_binary_io/: Cargo.toml
tox_binary_io/src/: crypto.rs  lib.rs  sodium.rs
tox_core/: Cargo.toml
tox_core/src/: io_tokio.rs  lib.rs  stats.rs  time.rs  udp.rs  utils.rs
tox_core/src/dht/: codec.rs  daemon_state.rs  dht_friend.rs  dht_node.rs  forced_ktree.rs  ip_port.rs  kbucket.rs  ktree.rs  lan_discovery.rs  mod.rs  precomputed_cache.rs  request_queue.rs  server_ext.rs
tox_core/src/dht/server/: errors.rs  hole_punching.rs  mod.rs
tox_core/src/friend_connection/: errors.rs  mod.rs
tox_core/src/messenger/: mod.rs
tox_core/src/messenger/transfer_file/: errors.rs  mod.rs  transfer_file.rs
tox_core/src/net_crypto/: crypto_connection.rs  errors.rs  mod.rs  packets_array.rs
tox_core/src/onion/: mod.rs  onion_announce.rs
tox_core/src/onion/client/: errors.rs  mod.rs  nodes_pool.rs  onion_path.rs  paths_pool.rs
tox_core/src/relay/: codec.rs  links.rs  mod.rs  secure.rs
tox_core/src/relay/client/: client.rs  connections.rs  errors.rs  mod.rs
tox_core/src/relay/handshake/: codec.rs  mod.rs  packet.rs
tox_core/src/relay/server/: client.rs  mod.rs  server.rs  server_ext.rs
tox_core/src/state_format/: mod.rs  old.rs
tox_core/tests/: state-format-old.rs
tox_core/tests/data/: old-profile-with-contacts.tox
tox_crypto/: Cargo.toml
tox_crypto/src/: increment_benchmark.rs  lib.rs
tox_encryptsave/: Cargo.toml
tox_encryptsave/src/: lib.rs
tox_encryptsave/tests/: encryptsave_tests.rs
tox_node/: Cargo.toml  Dockerfile  README.md
tox_node/dpkg/: config.yml  usr.bin.tox-node
tox_node/src/: main.rs  motd.rs  node_config.rs
tox_packet/: Cargo.toml
tox_packet/src/: ip_port.rs  lib.rs  packed_node.rs  toxid.rs
tox_packet/src/dht/: bootstrap_info.rs  cookie.rs  cookie_request.rs  cookie_response.rs  crypto_data.rs  crypto_handshake.rs  dht_request.rs  errors.rs  lan_discovery.rs  macros.rs  mod.rs  nodes_request.rs  nodes_response.rs  packed_node.rs  ping_request.rs  ping_response.rs
tox_packet/src/friend_connection/: alive.rs  friend_requests.rs  mod.rs  share_relays.rs
tox_packet/src/messenger/: action.rs  message.rs  mod.rs  msi.rs  nickname.rs  offline.rs  online.rs  status_message.rs  typing.rs  user_status.rs
tox_packet/src/messenger/conference/: action.rs  change_name.rs  change_title.rs  freeze_peer.rs  invite.rs  invite_response.rs  kill_peer.rs  message.rs  mod.rs  new_peer.rs  peer_leave.rs  peer_online.rs  ping.rs  query.rs  query_response.rs  title.rs
tox_packet/src/messenger/file_transfer/: file_control.rs  file_data.rs  file_send_request.rs  mod.rs
tox_packet/src/onion/: friend_request.rs  inner_onion_request.rs  inner_onion_response.rs  mod.rs  onion_announce_request.rs  onion_announce_response.rs  onion_data_request.rs  onion_data_response.rs  onion_request_0.rs  onion_request_1.rs  onion_request_2.rs  onion_response_1.rs  onion_response_2.rs  onion_response_3.rs
tox_packet/src/relay/: connect_notification.rs  connection_id.rs  data.rs  disconnect_notification.rs  handshake.rs  mod.rs  onion_request.rs  onion_response.rs  oob_receive.rs  oob_send.rs  ping_request.rs  pong_response.rs  route_request.rs  route_response.rs
(+156 files in other folders)
