[package]
name = "tox"
version = "0.0.10"
authors = [
  "Zetok Zalbavar <zetok@openmailbox.org>",
  "Roman Proskuryakov <humbug@deeptown.org>",
  "Namsoo CHO <nscho66@gmail.com>",
  "Evgeny Kurnevsky <kurnevsky@gmail.com>",
]
readme = "README.md"
description = '''
Implementation of toxcore in pure Rust -
P2P, distributed, encrypted, easy
to use DHT-based network.
'''
documentation = "https://docs.rs/tox/"
repository = "https://github.com/tox-rs/tox/"
keywords = ["p2p", "instant-messaging", "tox", "toxcore", "networking"]
categories = ["multimedia"]
license = "MIT OR GPL-3.0+"
edition = "2018"

[badges]
travis-ci = { repository = "tox-rs/tox" }
appveyor = { repository = "tox-rs/tox", id = "m47ke5odayd6enbn" }
coveralls = { repository = "tox-rs/tox" }
# Available options are `actively-developed`, `passively-maintained`,
# `as-is`, `none`, `experimental`, `looking-for-maintainer`, `deprecated`.
maintenance = { status = "actively-developed" }

[dependencies]
bytes = "0.5"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
log = "0.4"
sodiumoxide = "0.2.5"
nom = "5.1"
cookie-factory = "0.3"
get_if_addrs = "0.5"
parking_lot = "0.10"
failure = "0.1"
lru = "0.3"
bitflags = "1.0"

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["net", "sync", "stream", "time"]

[dependencies.tokio-util]
version = "0.2"
features = ["codec", "udp"]

[dev-dependencies]
env_logger = "0.7"
hex = "0.4"

[dev-dependencies.tokio]
version = "0.2"
default-features = false
features = ["macros", "test-util", "net", "rt-core", "rt-threaded", "sync", "stream", "time"]
