[package]
name = "tox-node"
version = "0.1.1"
authors = [
  "Roman Proskuryakov <humbug@deeptown.org>",
  "Evgeny Kurnevsky <kurnevsky@gmail.com>",
  "Namsoo CHO <nscho66@gmail.com>",
]
readme = "README.md"
description = "A server application to run tox node"
documentation = "https://docs.rs/crate/tox-node/"
repository = "https://github.com/tox-rs/tox-node/"
keywords = ["p2p", "instant-messaging", "tox", "toxcore", "networking"]
categories = ["multimedia"]
license = "GPL-3.0+"
edition = "2018"


[package.metadata.deb]
maintainer = "Roman Proskuryakov <humbug@deeptown.org>"
license-file = ["LICENSE"]
depends = "$auto, systemd"
extended-description = "A server application to run tox node written in pure Rust"
section = "net"
priority = "optional"
assets = [
    ["target/release/tox-node", "/usr/bin/", "755"],
    ["README.md", "/usr/share/doc/tox-node/README", "644"],
    ["dpkg/tox-node.service", "/lib/systemd/system/", "644"],
    ["dpkg/config.yml", "/etc/tox-node/", "644"],
    ["dpkg/usr.bin.tox-node", "/etc/apparmor.d/", "644"],
]
conf-files = ["/etc/tox-node/config.yml"]
maintainer-scripts = "dpkg/info"


[dependencies]
chrono = "0.4"
clap = "2.33"
env_logger = "0.9"
anyhow = "1.0"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
hex = "0.4"
itertools = "0.10"
log = "0.4"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
crypto_box = "0.8"
rand = "0.8"
tox = { git = "https://github.com/tox-rs/tox.git" }

[dependencies.config]
version = "0.10"
default-features = false
features = ["yaml"]

[dependencies.tokio]
version = "1.12"
default-features = false
features = ["net", "time", "rt", "rt-multi-thread"]

[target.'cfg(unix)'.dependencies]
syslog = "5.0"
