[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
tox_binary_io = { version = "0.1.1", path = "../tox_binary_io", features = ["crypto"] }
tox_crypto = { version = "0.1.1", path = "../tox_crypto" }
tox_packet = { version = "0.1.1", path = "../tox_packet" }
tox_core = { version = "0.1.1", path = "../tox_core" }

log = "0.4"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
env_logger = "0.9"
hex = "0.4"
thiserror = "1.0"
rand = "0.8"
anyhow = "1.0"

[dev-dependencies.tokio]
version = "1.12"
default-features = false
features = ["macros", "test-util", "net", "rt", "rt-multi-thread", "sync", "time"]

[dev-dependencies.tokio-util]
version = "0.6"
features = ["codec", "net"]

[[example]]
name = "dht_server"
path = "dht_server.rs"

[[example]]
name = "echo"
path = "echo.rs"

[[example]]
name = "onion_client"
path = "onion_client.rs"

[[example]]
name = "tcp_client"
path = "tcp_client.rs"

[[example]]
name = "tcp_server"
path = "tcp_server.rs"
