[package]
name = "tox_core"
version = "0.1.0"
authors = [
    "Zetok Zalbavar <zetok@openmailbox.org>",
    "Roman Proskuryakov <humbug@deeptown.org>",
    "Namsoo CHO <nscho66@gmail.com>",
    "Evgeny Kurnevsky <kurnevsky@gmail.com>",
    "Сухарик <65870+suhr@users.noreply.github.com>"
]
description = "The core of tox"
documentation = "https://docs.rs/tox_core/"
repository = "https://github.com/tox-rs/tox/"
keywords = ["p2p", "instant-messaging", "tox", "toxcore", "networking"]
categories = ["multimedia"]
license = "GPL-3.0+"
edition = "2018"

[dependencies]
tox_binary_io = { version = "0.1.0", path = "../tox_binary_io" }
tox_crypto = { version = "0.1.0", path = "../tox_crypto" }
tox_packet = { version = "0.1.0", path = "../tox_packet" }

bytes = "0.5"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
log = "0.4"
nom = "5.1"
cookie-factory = "0.3"
get_if_addrs = "0.5"
failure = "0.1"
lru = "0.3"
bitflags = "1.0"

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["net", "sync", "stream", "time"]

[dependencies.tokio-util]
version = "0.2"
features = ["codec", "udp"]

[dev-dependencies.tokio]
version = "0.2"
default-features = false
features = ["macros", "test-util", "net", "rt-core", "rt-threaded", "sync", "stream", "time"]
