[package]
name = "tox_core"
version = "0.2.0"
authors = [
    "Zetok Zalbavar <zetok@openmailbox.org>",
    "Roman Proskuryakov <humbug@deeptown.org>",
    "Namsoo CHO <nscho66@gmail.com>",
    "Evgeny Kurnevsky <kurnevsky@gmail.com>",
    "Сухарик <65870+suhr@users.noreply.github.com>"
]
description = "The core of tox"
documentation = "https://docs.rs/tox_core/"
repository = "https://github.com/tox-rs/tox/"
keywords = ["p2p", "instant-messaging", "tox", "toxcore", "networking"]
categories = ["multimedia"]
license = "GPL-3.0+"
edition = "2021"

[dependencies]
tox_binary_io = { version = "0.2.0", path = "../tox_binary_io" }
tox_crypto = { version = "0.2.0", path = "../tox_crypto" }
tox_packet = { version = "0.2.0", path = "../tox_packet" }

bytes = "1.2"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
log = "0.4"
nom = "7.1"
cookie-factory = "0.3"
get_if_addrs = "0.5"
thiserror = "1.0"
lru = "0.8"
bitflags = "1.3"
itertools = "0.10"
rand = "0.8"
sha2 = "0.10"
xsalsa20poly1305 = "0.9"
crypto_box = "0.8"

[dependencies.tokio]
version = "1.21"
default-features = false
features = ["net", "sync", "time"]

[dependencies.tokio-util]
version = "0.7"
features = ["codec", "net"]

[dev-dependencies.tokio]
version = "1.21"
default-features = false
features = ["macros", "test-util", "net", "rt", "rt-multi-thread", "sync", "time"]
