[package]
name = "tox_crypto"
version = "0.1.1"
authors = [
    "Zetok Zalbavar <zetok@openmailbox.org>",
    "Roman Proskuryakov <humbug@deeptown.org>",
    "Namsoo CHO <nscho66@gmail.com>",
    "Evgeny Kurnevsky <kurnevsky@gmail.com>",
    "Сухарик <65870+suhr@users.noreply.github.com>"
]
description = "Cryptography used by tox"
documentation = "https://docs.rs/tox_crypto/"
repository = "https://github.com/tox-rs/tox/"
keywords = ["tox", "toxcore", "crypto"]
categories = ["multimedia"]
license = "GPL-3.0+"
edition = "2018"

[dependencies]
crypto_box = "0.6"
crypto-bigint = "0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "increment_benchmark"
path = "src/increment_benchmark.rs"
harness = false
