[package]
name = "tox_encryptsave"
version = "0.1.1"
authors = [
    "Zetok Zalbavar <zetok@openmailbox.org>",
    "Roman Proskuryakov <humbug@deeptown.org>",
    "Namsoo CHO <nscho66@gmail.com>",
    "Evgeny Kurnevsky <kurnevsky@gmail.com>",
    "Сухарик <65870+suhr@users.noreply.github.com>"
]
description = "Encryptsave part of tox"
documentation = "https://docs.rs/tox_encryptsave/"
repository = "https://github.com/tox-rs/tox/"
keywords = ["p2p", "instant-messaging", "tox", "toxcore", "networking"]
categories = ["multimedia"]
license = "GPL-3.0+"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
rand = "0.8"
sha2 = "0.9"
xsalsa20poly1305 = "0.7"
scrypt = "0.6"
zeroize = "1.3"
