[package]
name = "tox_packet"
version = "0.1.1"
authors = [
    "Zetok Zalbavar <zetok@openmailbox.org>",
    "Roman Proskuryakov <humbug@deeptown.org>",
    "Namsoo CHO <nscho66@gmail.com>",
    "Evgeny Kurnevsky <kurnevsky@gmail.com>",
    "Сухарик <65870+suhr@users.noreply.github.com>"
]
description = "Encoding/decoding for the tox protocol"
documentation = "https://docs.rs/tox_packet/"
repository = "https://github.com/tox-rs/tox/"
keywords = ["p2p", "instant-messaging", "tox", "toxcore", "networking"]
categories = ["multimedia"]
license = "GPL-3.0+"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tox_binary_io = { version = "0.1.0", path = "../tox_binary_io", features = ["sodium"] }
tox_crypto = { version = "0.1.0", path = "../tox_crypto" }

nom = "5.1"
cookie-factory = "0.3"
bitflags = "1.0"
failure = "0.1"
sha2 = "0.9"
xsalsa20poly1305 = "0.6"
rand = "0.8"
