[package]
name = "tox_packet"
version = "0.1.1"
authors = [
    "Zetok Zalbavar <zetok@openmailbox.org>",
    "Roman Proskuryakov <humbug@deeptown.org>",
    "Namsoo CHO <nscho66@gmail.com>",
    "Evgeny Kurnevsky <kurnevsky@gmail.com>",
    "Сухарик <65870+suhr@users.noreply.github.com>"
]
description = "Encoding/decoding for the tox protocol"
documentation = "https://docs.rs/tox_packet/"
repository = "https://github.com/tox-rs/tox/"
keywords = ["p2p", "instant-messaging", "tox", "toxcore", "networking"]
categories = ["multimedia"]
license = "GPL-3.0+"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tox_binary_io = { version = "0.1.0", path = "../tox_binary_io", features = ["crypto"] }
tox_crypto = { version = "0.1.0", path = "../tox_crypto" }

nom = "7.1"
cookie-factory = "0.3"
bitflags = "1.3"
thiserror = "1.0"
sha2 = "0.10"
xsalsa20poly1305 = "0.9"
# for enabling rand_core feature
aead = { version = "0.5", features = ["rand_core"] }
rand = "0.8"
crypto_box = "0.8"
